--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -5,3 +5,6 @@
 $breakpoint-extra-small: 640px;
 $breakpoint-small: 768px;
 $breakpoint-medium: 1024px;
+$breakpoint-large: 1280px;
+$breakpoint-extra-large: 1440px;
+$breakpoint-ultra-large: 1920px;
